[energymanager] refactor for better separation of concerns